--- a/TestSite/config/uSync8.config
+++ b/TestSite/config/uSync8.config
@@ -12,9 +12,9 @@
     <!-- calls a rebuild cache when an import completes
         (for Umbraco 8.3+ recommended value is false)  -->
     <RebuildCacheOnCompletion>False</RebuildCacheOnCompletion>
-    
+  
     <!-- handler sets -->
-    <HandlerSets default="default">
+    <HandlerSets Default="default">
 
       <Handlers Name="default">
         <Handler Alias="dataTypeHandler" Enabled="true" />
@@ -29,7 +29,8 @@
         <Handler Alias="dictionaryHandler" Enabled="true" />
         <Handler Alias="domainHandler" Enabled="true" />
         <Handler Alias="mediaHandler" Enabled="true" />
-      </Handlers>
+				<Handler Alias="relationTypeHandler" Enabled="false" />
+			</Handlers>
 
     </HandlerSets>
 
@@ -41,6 +42,15 @@
 			<Add Key="MyCustomUrlPicker" Value="Umbraco.MultiUrlPicker" />
 		</Mappings>
 		-->
-  
-</BackOffice>
+
+		<!-- defaults settings that can be used across all handlers -->
+		<!-- 
+		<HandlerDefaults>
+			<Add Key="NoRemove" Value="true" />
+			<Add Key="CreateOnly" Value="true" />
+		</HandlerDefaults>
+		-->
+
+
+	</BackOffice>
 </uSync>
