--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -33,7 +33,8 @@
     "culture": "en-US",
     "description": "/us/",
     "queryString": "#test",
-    "anchor": "#test5"
+    "anchor": "#test5",
+    "collapsed": false
   },
   {
     "id": 1114,
@@ -45,7 +46,8 @@
     "published": true,
     "naviHide": false,
     "culture": "en-US",
-    "description": "/us/people/"
+    "description": "/us/people/",
+    "collapsed": false
   },
   {
     "id": 1120,
@@ -63,14 +65,16 @@
         "published": true,
         "naviHide": false,
         "culture": "en-US",
-        "description": "/us/about-us/about-this-starter-kit/"
+        "description": "/us/about-us/about-this-starter-kit/",
+        "collapsed": false
       }
     ],
     "icon": "icon-document",
     "published": true,
     "naviHide": false,
     "culture": "en-US",
-    "description": "/us/about-us/"
+    "description": "/us/about-us/",
+    "collapsed": false
   },
   {
     "id": 1123,
@@ -82,7 +86,8 @@
     "published": true,
     "naviHide": false,
     "culture": "en-US",
-    "description": "/us/blog/"
+    "description": "/us/blog/",
+    "collapsed": false
   },
   {
     "id": 1127,
@@ -94,7 +99,8 @@
     "published": true,
     "naviHide": false,
     "culture": "en-US",
-    "description": "/us/contact/"
+    "description": "/us/contact/",
+    "collapsed": false
   },
   {
     "id": 1105,
@@ -106,7 +112,8 @@
     "published": true,
     "naviHide": false,
     "culture": "en-US",
-    "description": "/us/products/"
+    "description": "/us/products/",
+    "collapsed": false
   },
   {
     "description": "https://www.google.com#Test12356",
@@ -114,7 +121,8 @@
     "anchor": "#Test12356",
     "url": "https://www.google.com#Test12356",
     "children": [],
-    "icon": "icon-link"
+    "icon": "icon-link",
+    "collapsed": false
   }
 ]]]></Value>
       <Value Culture="en-gb"><![CDATA[[
