--- a/TestSite/uSync/v8/DataTypes/TrueFalse.config
+++ b/TestSite/uSync/v8/DataTypes/TrueFalse.config
@@ -6,7 +6,9 @@
     <DatabaseType>Integer</DatabaseType>
   </Info>
   <Config><![CDATA[{
-  "Default": null,
-  "Label": null
+  "Default": false,
+  "ShowLabels": false,
+  "LabelOn": null,
+  "LabelOff": null
 }]]></Config>
 </DataType>
