--- a/TestSite/uSync/v8/DataTypes/MainNavigationMegaNavV8MeganavV8.config
+++ b/TestSite/uSync/v8/DataTypes/MainNavigationMegaNavV8MeganavV8.config
@@ -2,11 +2,10 @@
 <DataType Key="0a30585f-a2ee-447f-8c58-6644dc3087b4" Alias="Main Navigation - MegaNav V8 - MeganavV8" Level="1">
   <Info>
     <Name>Main Navigation - MegaNav V8 - MeganavV8</Name>
-    <EditorAlias>Our.Umbraco.MeganavV8</EditorAlias>
+    <EditorAlias>Umbraco.Label</EditorAlias>
     <DatabaseType>Ntext</DatabaseType>
   </Info>
   <Config><![CDATA[{
-  "MaxDepth": 0,
-  "RemoveNaviHideItems": true
+  "ValueType": "STRING"
 }]]></Config>
 </DataType>
