--- a/src/TestSite_Single_Language/TestSite_Single_Language.csproj
+++ b/src/TestSite_Single_Language/TestSite_Single_Language.csproj
@@ -283,6 +283,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Plugins\MeganavV8\Css\editor.css" />
+    <Content Include="App_Plugins\MeganavV8\Js\angular-ui-tree.js" />
+    <Content Include="App_Plugins\MeganavV8\Js\meganavv8.controller.js" />
+    <Content Include="App_Plugins\MeganavV8\Js\meganavv8.resource.js" />
+    <Content Include="App_Plugins\MeganavV8\Views\editor.html" />
+    <Content Include="App_Plugins\MeganavV8\Views\settings.html" />
     <Content Include="App_Plugins\OsmMaps\assets\css\osmmaps.css" />
     <Content Include="App_Plugins\OsmMaps\assets\leaflet\images\layers-2x.png" />
     <Content Include="App_Plugins\OsmMaps\assets\leaflet\images\layers.png" />
@@ -386,6 +392,7 @@
     <Content Include="App_Plugins\StarterKit\package.manifest" />
     <Content Include="App_Plugins\uSync8\package.manifest" />
     <Content Include="App_Plugins\uSync8\addons.json" />
+    <Content Include="App_Plugins\MeganavV8\package.manifest" />
     <None Include="packages.config" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Partials\Grid\Editors\Textstring.cshtml" />
@@ -403,6 +410,16 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AaronSadler.MegaNavV8.Api\AaronSadler.MegaNavV8.Api.csproj">
+      <Project>{577f0fb6-fde2-437c-99fb-96cc8ae26ef0}</Project>
+      <Name>AaronSadler.MegaNavV8.Api</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AaronSadler.MegaNavV8.Core\AaronSadler.MegaNavV8.Core.csproj">
+      <Project>{da07b41d-3df6-48ff-833d-10e284f4248b}</Project>
+      <Name>AaronSadler.MegaNavV8.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
