Reinstalled test site due to corrupt db

--- a/TestSite/uSync/v8/Content/about-us.config
+++ b/TestSite/uSync/v8/Content/about-us.config
@@ -5,10 +5,10 @@
     <Path>/Home/AboutUs</Path>
     <Trashed>false</Trashed>
     <ContentType>contentPage</ContentType>
-    <CreateDate>2020-10-01T09:47:53</CreateDate>
+    <CreateDate>2021-01-21T18:30:30</CreateDate>
     <NodeName Default="About Us">
       <Name Culture="en-us">About Us</Name>
-      <Name Culture="en-gb">About us GB</Name>
+      <Name Culture="en-gb">About Us 2</Name>
     </NodeName>
     <SortOrder>2</SortOrder>
     <Published Default="true">
@@ -16,7 +16,7 @@
       <Published Culture="en-us">true</Published>
     </Published>
     <Schedule />
-    <Template Key="660fcd1e-f97f-4930-a4c5-cdeebd30d4e6">contentPage</Template>
+    <Template Key="bf8c093e-078a-47bc-943f-69685d0b9c6a">contentPage</Template>
   </Info>
   <Properties>
     <bodyText>
@@ -59,8 +59,7 @@
               "controls": [
                 {
                   "value": {
-                    "udi": "umb://media/c0969cab13ab4de9819a848619ac2b5d",
-                    "image": "/media/c2zk2v5r/18095416144_44a566a5f4_h.jpg"
+                    "udi": "umb://media/c0969cab13ab4de9819a848619ac2b5d"
                   },
                   "editor": {
                     "alias": "media",
