--- a/TestSite/uSync/v8/Content/another-one.config
+++ b/TestSite/uSync/v8/Content/another-one.config
@@ -5,12 +5,12 @@
     <Path>/Home/Blog/AnotherOne</Path>
     <Trashed>false</Trashed>
     <ContentType>blogpost</ContentType>
-    <CreateDate>2020-10-01T09:47:53</CreateDate>
+    <CreateDate>2021-01-21T18:30:30</CreateDate>
     <NodeName Default="Another one" />
     <SortOrder>1</SortOrder>
     <Published Default="true" />
     <Schedule />
-    <Template Key="10f3d04f-870b-4e24-a2a5-a44d016574f2">Blogpost</Template>
+    <Template Key="80bfb454-5b52-4024-bad5-8934a4fc3427">Blogpost</Template>
   </Info>
   <Properties>
     <bodyText>
@@ -18,50 +18,48 @@
   "name": "1 column layout",
   "sections": [
     {
-      "grid": "12",
+      "grid": 12,
+      "allowAll": true,
       "rows": [
         {
+          "label": "Article",
           "name": "Article",
-          "id": "011e74f2-b4de-0e4e-1cb9-23b2356b1213",
           "areas": [
             {
-              "grid": "4",
+              "grid": 4,
+              "hasConfig": false,
               "controls": [
                 {
                   "value": {
-                    "udi": "umb://media/55514845b8bd487cb3709724852fd6bb",
-                    "image": "/media/2g4iilp5/4730684907_8a7f8759cb_b.jpg"
+                    "udi": "umb://media/55514845b8bd487cb3709724852fd6bb"
                   },
                   "editor": {
-                    "alias": "media",
-                    "view": null
+                    "alias": "media"
                   },
-                  "styles": null,
-                  "config": null
+                  "active": false
                 }
               ],
-              "styles": null,
-              "config": null
+              "active": false
             },
             {
-              "grid": "8",
+              "grid": 8,
+              "hasConfig": false,
               "controls": [
                 {
                   "value": "<p>Donec sollicitudin molestie malesuada. Proin eget tortor risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla porttitor accumsan tincidunt. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Nulla porttitor accumsan tincidunt. Donec rutrum congue leo eget malesuada.</p>\n<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Pellentesque in ipsum id orci porta dapibus. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Sed porttitor lectus nibh.</p>\n<p>Pellentesque in ipsum id orci porta dapibus. Curabitur aliquet quam id dui posuere blandit. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec rutrum congue leo eget malesuada. Donec rutrum congue leo eget malesuada. Sed porttitor lectus nibh. Nulla quis lorem ut libero malesuada feugiat.</p>",
                   "editor": {
-                    "alias": "rte",
-                    "view": null
+                    "alias": "rte"
                   },
-                  "styles": null,
-                  "config": null
+                  "active": true
                 }
               ],
-              "styles": null,
-              "config": null
+              "active": true
             }
           ],
-          "styles": null,
-          "config": null
+          "hasConfig": false,
+          "id": "011e74f2-b4de-0e4e-1cb9-23b2356b1213",
+          "hasActiveChild": true,
+          "active": true
         }
       ]
     }
