--- a/TestSite/uSync/v8/Content/home.config
+++ b/TestSite/uSync/v8/Content/home.config
@@ -5,12 +5,12 @@
     <Path>/Home</Path>
     <Trashed>false</Trashed>
     <ContentType>home</ContentType>
-    <CreateDate>2020-10-01T09:47:53</CreateDate>
+    <CreateDate>2021-01-21T18:30:30</CreateDate>
     <NodeName Default="Home" />
     <SortOrder>0</SortOrder>
     <Published Default="true" />
     <Schedule />
-    <Template Key="16fc1e99-98af-4418-b631-7ada47b86030">home</Template>
+    <Template Key="1d08be12-cd2e-4f19-993f-2d4ad238e401">home</Template>
   </Info>
   <Properties>
     <bodyText>
@@ -18,21 +18,14 @@
   "name": "1 column layout",
   "sections": [
     {
-      "grid": 12,
+      "grid": "12",
       "rows": [
         {
           "name": "Full Width",
+          "id": "314cb47b-fbe1-eeb6-f7cc-38db875d0f06",
           "areas": [
             {
-              "grid": 12,
-              "allowAll": false,
-              "allowed": [
-                "media",
-                "macro",
-                "embed",
-                "headline"
-              ],
-              "hasConfig": false,
+              "grid": "12",
               "controls": [
                 {
                   "value": {
@@ -43,20 +36,19 @@
                     }
                   },
                   "editor": {
-                    "name": "Macro",
                     "alias": "macro",
-                    "view": "macro",
-                    "render": null,
-                    "icon": "icon-settings-alt",
-                    "config": {}
+                    "view": "macro"
                   },
-                  "active": false
+                  "styles": null,
+                  "config": null
                 }
-              ]
+              ],
+              "styles": null,
+              "config": null
             }
           ],
-          "hasConfig": false,
-          "id": "314cb47b-fbe1-eeb6-f7cc-38db875d0f06"
+          "styles": null,
+          "config": null
         }
       ]
     }
