--- a/TestSite/uSync/v8/Content/main-navigation.config
+++ b/TestSite/uSync/v8/Content/main-navigation.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="5df70a03-8d12-4f7f-a0a1-0516ae84a63e" Alias="Main Navigation" Level="2">
+<Content Key="007d8a89-7e76-464d-ab61-ba62213bd9fb" Alias="Main Navigation" Level="2">
   <Info>
     <Parent Key="ca4249ed-2b23-4337-b522-63cabe5587d1">Home</Parent>
     <Path>/Home/MainNavigation</Path>
     <Trashed>false</Trashed>
-    <ContentType>mainNavigation</ContentType>
-    <CreateDate>2020-10-01T18:39:46</CreateDate>
+    <ContentType>megaNav</ContentType>
+    <CreateDate>2021-01-21T18:54:41</CreateDate>
     <NodeName Default="Main Navigation">
       <Name Culture="en-us">Main Navigation</Name>
-      <Name Culture="en-gb">Main Navigation GB</Name>
+      <Name Culture="en-gb">Main Menu</Name>
     </NodeName>
     <SortOrder>5</SortOrder>
     <Published Default="true">
@@ -19,191 +19,49 @@
     <Template />
   </Info>
   <Properties>
-    <megaNavV8>
+    <menu>
       <Value Culture="en-us"><![CDATA[[
-  {
-    "id": 1104,
-    "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
-    "name": "Home",
-    "url": "/us/",
-    "children": [],
-    "icon": "icon-home color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-US",
-    "description": "/us/",
-    "queryString": "#test",
-    "anchor": "#test5",
-    "collapsed": false
-  },
-  {
-    "id": 1114,
-    "udi": "umb://document/e8ad9b65cff64952ac5befe56a60db62",
-    "name": "People",
-    "url": "/us/people/",
-    "children": [],
-    "icon": "icon-user-females-alt color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-US",
-    "description": "/us/people/",
-    "collapsed": false
-  },
   {
     "id": 1120,
     "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
-    "name": "About Us",
-    "url": "/us/about-us/",
-    "children": [
-      {
-        "id": 1121,
-        "udi": "umb://document/ee82cba3a0e740639ae13026a4f72a3d",
-        "name": "About this Starter Kit",
-        "url": "/us/about-us/about-this-starter-kit/",
-        "children": [],
-        "icon": "icon-document",
-        "published": true,
-        "naviHide": false,
-        "culture": "en-US",
-        "description": "/us/about-us/about-this-starter-kit/",
-        "collapsed": false
-      }
-    ],
+    "name": "About Us 2",
+    "description": "/us/about-us/",
+    "url": "/uk/about-us-2/",
+    "children": [],
     "icon": "icon-document",
     "published": true,
     "naviHide": false,
-    "culture": "en-US",
-    "description": "/us/about-us/",
-    "collapsed": false
+    "culture": "en-GB"
   },
   {
-    "id": 1123,
-    "udi": "umb://document/1d770f10d1ca4a269d68071e2c9f7ac1",
-    "name": "Blog",
-    "url": "/us/blog/",
+    "description": "https://bing.com",
+    "title": "Bing",
+    "url": "https://bing.com",
     "children": [],
-    "icon": "icon-calendar-alt color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-US",
-    "description": "/us/blog/",
-    "collapsed": false
-  },
-  {
-    "id": 1127,
-    "udi": "umb://document/4a1f4198e14348baa0f51a7ef2df23aa",
-    "name": "Contact",
-    "url": "/us/contact/",
-    "children": [],
-    "icon": "icon-map-location color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-US",
-    "description": "/us/contact/",
-    "collapsed": false
-  },
-  {
-    "id": 1105,
-    "udi": "umb://document/ec4aafcc0c254f25a8fe705bfae1d324",
-    "name": "Products",
-    "url": "/us/products/",
-    "children": [],
-    "icon": "icon-shopping-basket color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-US",
-    "description": "/us/products/",
-    "collapsed": false
-  },
-  {
-    "description": "https://www.google.com#Test12356",
-    "title": "Google",
-    "anchor": "#Test12356",
-    "url": "https://www.google.com#Test12356",
-    "children": [],
-    "icon": "icon-link",
-    "collapsed": false
+    "icon": "icon-link"
   }
 ]]]></Value>
       <Value Culture="en-gb"><![CDATA[[
   {
-    "id": 1104,
-    "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
-    "name": "Home",
-    "url": "/en/#test",
-    "children": [
-      {
-        "id": 1114,
-        "udi": "umb://document/e8ad9b65cff64952ac5befe56a60db62",
-        "name": "People",
-        "url": "/en/people/",
-        "children": [
-          {
-            "id": 1120,
-            "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
-            "name": "About us GB",
-            "url": "/en/about-us-gb/",
-            "children": [
-              {
-                "id": 1123,
-                "udi": "umb://document/1d770f10d1ca4a269d68071e2c9f7ac1",
-                "name": "Blog",
-                "url": "/en/blog/",
-                "children": [],
-                "icon": "icon-calendar-alt color-black",
-                "published": true,
-                "naviHide": false,
-                "culture": "en-GB",
-                "description": "/en/blog/"
-              }
-            ],
-            "icon": "icon-document",
-            "published": true,
-            "naviHide": false,
-            "culture": "en-GB",
-            "description": "/en/about-us-gb/"
-          }
-        ],
-        "icon": "icon-user-females-alt color-black",
-        "published": true,
-        "naviHide": false,
-        "culture": "en-GB",
-        "description": "/en/people/"
-      }
-    ],
-    "icon": "icon-home color-black",
+    "id": 1120,
+    "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
+    "name": "About Us 2",
+    "description": "/uk/about-us-2/",
+    "url": "/uk/about-us-2/",
+    "children": [],
+    "icon": "icon-document",
     "published": true,
     "naviHide": false,
-    "culture": "en-GB",
-    "description": "/en/",
-    "queryString": "#test"
+    "culture": "en-GB"
   },
   {
-    "id": 1127,
-    "udi": "umb://document/4a1f4198e14348baa0f51a7ef2df23aa",
-    "name": "Contact",
-    "url": "/en/contact/",
+    "description": "https://www.google.com",
+    "title": "Google",
+    "url": "https://www.google.com",
     "children": [],
-    "icon": "icon-map-location color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-GB",
-    "description": "/en/contact/"
-  },
-  {
-    "id": 1105,
-    "udi": "umb://document/ec4aafcc0c254f25a8fe705bfae1d324",
-    "name": "Products",
-    "url": "/en/products/",
-    "children": [],
-    "icon": "icon-shopping-basket color-black",
-    "published": true,
-    "naviHide": false,
-    "culture": "en-GB",
-    "queryString": "#test",
-    "description": "/us/products/#test"
+    "icon": "icon-link"
   }
 ]]]></Value>
-    </megaNavV8>
+    </menu>
   </Properties>
 </Content>
