--- a/TestSite/uSync/v8/Templates/blog.config
+++ b/TestSite/uSync/v8/Templates/blog.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Template Key="ede26268-094d-4a7a-abc5-e96db11b933e" Alias="Blog" Level="2">
+<Template Key="42fd4c62-31e9-4237-848c-a051aae137cd" Alias="Blog" Level="1">
   <Name>Blog</Name>
-  <Parent>master</Parent>
+  <Parent />
 </Template>
