--- a/TestSite/uSync/v8/Templates/blogpost.config
+++ b/TestSite/uSync/v8/Templates/blogpost.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Template Key="10f3d04f-870b-4e24-a2a5-a44d016574f2" Alias="Blogpost" Level="2">
+<Template Key="80bfb454-5b52-4024-bad5-8934a4fc3427" Alias="Blogpost" Level="1">
   <Name>Blogpost</Name>
-  <Parent>master</Parent>
+  <Parent />
 </Template>
