--- a/TestSite/uSync/v8/Templates/contact.config
+++ b/TestSite/uSync/v8/Templates/contact.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Template Key="d454360d-906b-4c0c-baf3-127b74aea6c4" Alias="contact" Level="2">
+<Template Key="1bb14614-7b28-4ff3-afd1-7d3ee8401859" Alias="contact" Level="1">
   <Name>Contact</Name>
-  <Parent>master</Parent>
+  <Parent />
 </Template>
