--- a/TestSite/uSync/v8/Templates/contentpage.config
+++ b/TestSite/uSync/v8/Templates/contentpage.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Template Key="660fcd1e-f97f-4930-a4c5-cdeebd30d4e6" Alias="contentPage" Level="2">
+<Template Key="bf8c093e-078a-47bc-943f-69685d0b9c6a" Alias="contentPage" Level="1">
   <Name>ContentPage</Name>
-  <Parent>master</Parent>
+  <Parent />
 </Template>
