--- a/TestSite/uSync/v8/Templates/people.config
+++ b/TestSite/uSync/v8/Templates/people.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Template Key="739dcd24-4d33-4c7c-a8de-0149403ab81d" Alias="people" Level="2">
+<Template Key="2fa1031c-c402-4bf5-8414-bd9e4b1c4ba6" Alias="people" Level="1">
   <Name>People</Name>
-  <Parent>master</Parent>
+  <Parent />
 </Template>
