--- a/TestSite/uSync/v8/Templates/product.config
+++ b/TestSite/uSync/v8/Templates/product.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Template Key="857f010a-f7b9-4bd1-a660-e7788a14d212" Alias="Product" Level="2">
+<Template Key="09ec603a-9c40-458a-a18f-08941a096327" Alias="Product" Level="1">
   <Name>Product</Name>
-  <Parent>master</Parent>
+  <Parent />
 </Template>
