--- a/TestSite/uSync/v8/Templates/products.config
+++ b/TestSite/uSync/v8/Templates/products.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Template Key="1e1334fb-0fce-4856-8c61-7b5d42a48152" Alias="Products" Level="2">
+<Template Key="e846b4c8-0bc8-4262-b907-c54622a96ebb" Alias="Products" Level="1">
   <Name>Products</Name>
-  <Parent>master</Parent>
+  <Parent />
 </Template>
