--- a/TestSite/App_Data/packages/installedPackages.config
+++ b/TestSite/App_Data/packages/installedPackages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="1" version="4.1.0" url="https://umbraco.com" name="The Starter Kit" packagePath="D:\Repos\Umbraco.MegaNavV8\src\TestSite2\App_Data\packages\ced954d1-8c0f-4abe-bdda-99e7a787d052.umb" iconUrl="" umbVersion="8.7.0" packageGuid="6916e07e-2122-44ea-afd9-30c27209c338" view="">
+  <package id="1" version="4.1.0" url="https://umbraco.com" name="The Starter Kit" packagePath="D:\Repos\Umbraco.MegaNavV8\TestSite\App_Data\packages\ced954d1-8c0f-4abe-bdda-99e7a787d052.umb" iconUrl="" umbVersion="8.7.0" packageGuid="ced954d1-8c0f-4abe-bdda-99e7a787d052" view="">
     <license url="http://opensource.org/licenses/MIT"><![CDATA[MIT License]]></license>
     <author url="https://umbraco.com"><![CDATA[Umbraco HQ]]></author>
     <contributors />
@@ -8,12 +8,12 @@
 
 It contains a simple website that contains many basic features to help get you started including a home page, a blog, a product catalog, contact page and more.]]></readme>
     <actions></actions>
-    <datatypes>1060,1061,1062,1063,1064,1065,1066,1067,1068,1069,1070,1071,1072,1073,1074,1075,1076,1077,1078,1079,1080</datatypes>
-    <content nodeId="1104" loadChildNodes="false" />
-    <templates>1081,1082,1083,1084,1085,1086,1087,1088,1089,1090</templates>
+    <datatypes></datatypes>
+    <content nodeId="" loadChildNodes="false" />
+    <templates></templates>
     <stylesheets></stylesheets>
-    <documentTypes>1092,1093,1094,1095,1096,1097,1098,1099,1100,1101,1102,1103</documentTypes>
-    <macros>1,2</macros>
+    <documentTypes></documentTypes>
+    <macros></macros>
     <files>
       <file>Media\SK_Temp\7373036290_5e8420bf36_b.jpg</file>
       <file>Media\SK_Temp\14272036539_469ca21d5c_h.jpg</file>
