--- a/TestSite/Web.config
+++ b/TestSite/Web.config
@@ -59,8 +59,8 @@
   -->
     <connectionStrings>
         <remove name="umbracoDbDSN" />
-        <add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\Umbraco.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0" />
-    </connectionStrings>
+        <!--<add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\Umbraco.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0" />-->
+    <add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\Umbraco.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0" /></connectionStrings>
 
     <system.data>
         <DbProviderFactories>
