--- a/TestSite/uSync/v8/Domains/us_en-us.config
+++ b/TestSite/uSync/v8/Domains/us_en-us.config
@@ -1,2 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Empty Key="88f3079c-3ec5-4c7d-a9af-c273f3d4534f" Alias="/us" Change="Delete" />
+<Domain Key="a4980b54-0000-0000-0000-000000000000" Alias="/us/">
+  <Info>
+    <IsWildcard>false</IsWildcard>
+    <Language>en-US</Language>
+    <Root Key="ca4249ed-2b23-4337-b522-63cabe5587d1">/Home</Root>
+  </Info>
+</Domain>
