--- a/TestSite/uSync/v8/Templates/home.config
+++ b/TestSite/uSync/v8/Templates/home.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Template Key="16fc1e99-98af-4418-b631-7ada47b86030" Alias="home" Level="2">
+<Template Key="1d08be12-cd2e-4f19-993f-2d4ad238e401" Alias="home" Level="1">
   <Name>Home</Name>
-  <Parent>master</Parent>
+  <Parent />
 </Template>
