--- a/TestSite/uSync/v8/Templates/person.config
+++ b/TestSite/uSync/v8/Templates/person.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Template Key="2e7f8474-7d91-4e03-ab69-8efe19b9693b" Alias="Person" Level="2">
+<Template Key="f5c4d6f4-2cb2-491b-bff4-e8c3508a42fa" Alias="Person" Level="1">
   <Name>Person</Name>
-  <Parent>master</Parent>
+  <Parent />
 </Template>
