--- a/src/AaronSadler.MegaNavV8.Core/AaronSadler.MegaNavV8.Core.csproj
+++ b/src/AaronSadler.MegaNavV8.Core/AaronSadler.MegaNavV8.Core.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <Configurations>Debug;Release;Staging</Configurations>
-    <Version>8.2.0.0</Version>
+    <Version>8.2.1.0-beta</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Authors>Aaron Sadler, Callum Whyte</Authors>
