--- a/Builds/NuGet/AaronSadler.MegaNavV8.Web.nuspec
+++ b/Builds/NuGet/AaronSadler.MegaNavV8.Web.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>AaronSadler.MegaNavV8.Web</id>
-    <version>8.2.3</version>
+    <version>8.2.4</version>
     <title>Umbraco.MegaNavV8.Web</title>
     <authors>Aaron Sadler, Callum Whyte</authors>
     <owners>Aaron Sadler, Callum Whyte</owners>
@@ -12,11 +12,11 @@
     <icon>MegaNavV8-Logo.png</icon>
     <summary>A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco</summary>
     <description>A flexible, draggable link picker for constructing site navigation menus, big or small, in Umbraco</description>
-    <releaseNotes><![CDATA[Contains many tweaks and fixes, check GitHub for more info]]></releaseNotes>
+    <releaseNotes><![CDATA[Null check added for items which no longer exist]]></releaseNotes>
     <copyright>Copyright 2020</copyright>
     <tags>umbraco, umbraco-cms, MegaNav, MegaNav-V8</tags>
 	<dependencies>
-	  <dependency id="AaronSadler.MegaNavV8.Core" version="8.2.2" />
+	  <dependency id="AaronSadler.MegaNavV8.Core" version="8.2.3" />
 	  <dependency id="AaronSadler.MegaNavV8.Api" version="8.2.2" />
     </dependencies>
 	<repository type="git" url="https://github.com/AaronSadlerUK/Umbraco.MegaNavV8.git" branch="master" />
