--- a/src/TestSite_Single_Language/uSync/v8/Content/meganavv8.config
+++ b/src/TestSite_Single_Language/uSync/v8/Content/meganavv8.config
@@ -14,7 +14,80 @@
   </Info>
   <Properties>
     <mn8>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[[
+  {
+    "id": 1104,
+    "udi": "umb://document/ca4249ed2b234337b52263cabe5587d1",
+    "name": "Home",
+    "description": "/",
+    "url": "/",
+    "children": [],
+    "icon": "icon-home color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "undefined"
+  },
+  {
+    "id": 1105,
+    "udi": "umb://document/ec4aafcc0c254f25a8fe705bfae1d324",
+    "name": "Products",
+    "description": "/products/",
+    "url": "/products/",
+    "children": [],
+    "icon": "icon-shopping-basket color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "undefined"
+  },
+  {
+    "id": 1114,
+    "udi": "umb://document/e8ad9b65cff64952ac5befe56a60db62",
+    "name": "People",
+    "description": "/people/",
+    "url": "/people/",
+    "children": [],
+    "icon": "icon-user-females-alt color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "undefined"
+  },
+  {
+    "id": 1120,
+    "udi": "umb://document/3cce2545e3ac44ecbf55a52cc5965db3",
+    "name": "About Us",
+    "description": "/about-us/",
+    "url": "/about-us/",
+    "children": [],
+    "icon": "icon-document",
+    "published": true,
+    "naviHide": false,
+    "culture": "undefined"
+  },
+  {
+    "id": 1123,
+    "udi": "umb://document/1d770f10d1ca4a269d68071e2c9f7ac1",
+    "name": "Blog",
+    "description": "/blog/",
+    "url": "/blog/",
+    "children": [],
+    "icon": "icon-calendar-alt color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "undefined"
+  },
+  {
+    "id": 1127,
+    "udi": "umb://document/4a1f4198e14348baa0f51a7ef2df23aa",
+    "name": "Contact",
+    "description": "/contact/",
+    "url": "/contact/",
+    "children": [],
+    "icon": "icon-map-location color-black",
+    "published": true,
+    "naviHide": false,
+    "culture": "undefined"
+  }
+]]]></Value>
     </mn8>
   </Properties>
 </Content>
